--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-    <script src="assets/js/underscore.js"></script>
-    <script src="assets/js/juego.js"></script>
 </body>
+<script src="node_modules/underscore/underscore.js"></script>
+<script src="assets/js/juego.js"></script>
 </html>
