--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 </div>
 
 </body>
-<script src="node_modules/underscore/underscore.js"></script>
+<script src="assets/js/underscore.js"></script>
 <script src="assets/js/juego.js"></script>
 </html>
